--- a/SAM02_Cristobal/explore.html
+++ b/SAM02_Cristobal/explore.html
@@ -231,14 +231,14 @@
   <div class="container">
     <div class="row d-flex align-items-center">
       <div class="col-12">
-        <p class="responsive-text pt-3 mx-3" style="text-align: justify;">
+        <p class="responsive-text pt-3 mx-3" style="text-align: justify">
           Ang Lungsod ng San Pablo ay isang unang klaseng lungsod na matatagpuan sa lalawigan ng Laguna, Philippines.
           Kilala ito bilang "City of Seven Lakes" o "Lungsod ng Pitong Lawa" dahil sa mga tanyag na lawa nito
           tulad ng Sampaloc, Pandin, Yambo, Bunot, Palakpakin, Muhikap, at Calibato. Ang mga lawa ay
           paboritong pasyalan ng mga lokal at turista, na nag-aalok ng tanawin at mga aktibidad tulad ng
           boating at swimming.
         </p>
-        <p class="responsive-text pt-3 mx-3" style="text-align: justify;">
+        <p class="responsive-text pt-3 mx-3" style="text-align: justify">
           Bilang isang progresibong lungsod, ang San Pablo ay may aktibong ekonomiya na nakasentro sa agrikultura,
           industriya, at kalakalan. Kasama sa mga produkto nito ang niyog, palay, at mga gulay. Mayaman din
           ang lungsod sa kultura at kasaysayan, at tuwing Enero ay ipinagdiriwang ang Coconut Festival bilang
@@ -251,7 +251,7 @@
   <!-- Tourist spots -->
   <div class="container" id="discover">
     <div class="row my-5">
-      <h1 class="display-3 pt-2" style="text-align: center;"><strong>Mga Tourist Spots</strong></h1>
+      <h1 class="display-3 pt-2" style="text-align: center"><strong>Mga Tourist Spots</strong></h1>
     </div>
 
     <div class="row my-5">
@@ -493,7 +493,7 @@
     <div class="container-fluid d-flex justify-content-center">
       <a href="index.html"><img
           src="https://raw.githubusercontent.com/kayexnina/SAMA02_Cristobal/refs/heads/main/assets/sanpabLogo.png"
-          alt="Logo" class="img-fluid" style="max-width: 150px;"></a>
+          alt="Logo" class="img-fluid" style="max-width: 150px"></a>
     </div>
 
     <div class="container-fluid d-flex justify-content-center mt-4">
