--- a/SAM04_Cristobal/index.html
+++ b/SAM04_Cristobal/index.html
@@ -70,7 +70,7 @@
 
 <body>
   <div class="container-fluid d-flex justify-content-center align-items-center">
-    <div class="row justify-content-center align-items-center text-center" style="height: 100vh;">
+    <div class="row justify-content-center align-items-center text-center" style="height: 100vh">
       <div class="col-10 col-lg-6 col-md-8">
         <div class="card p-4">
           <h1 class="display-5" style="font-weight: bolder; color: var(--primary-color);">Grey's Anatomy</h1>
