--- a/SAM04_Cristobal/list.html
+++ b/SAM04_Cristobal/list.html
@@ -195,7 +195,7 @@
                     <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(7)">7</a></li>
                     <li class="page-item m-1"><a class="page-link" href="#" onclick="changePage(8)">8</a></li>
                 </ul>
-                <button onclick="goBack()" class="btn btn-primary rounded-5 px-5" style="font-size: 14px;">Back</button>
+                <button onclick="goBack()" class="btn btn-primary rounded-5 px-5" style="font-size: 14px">Back</button>
             </div>
         </div>
 
