--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
       <div class="col-12 col-lg-6 col-md-6 text-lg-start text-center">
         <h1 class="display-5">
           Hello, I'm <br />
-          <span class="display-3 auto-type"></span>
+          <span class="display-3 auto-type" style="font-weight: 700"></span>
         </h1>
         <p>
           Bachelor of Science in Information Technology
@@ -420,7 +420,7 @@
         <a href="#timeline" class="btn display-3 rounded-4 py-2 px-4" style="width: auto"><strong>Learn
             More</strong></a>
       </div>
-      <div class="col-12 col-lg-6 col-md-6 d-none d-lg-flex justify-content-center align-items-center">
+      <div class="col-12 col-lg-6 col-md-6 d-none d-lg-flex">
         <img src="https://raw.githubusercontent.com/kayexnina/SAM03_Cristobal/refs/heads/main/personal_Image1.png"
           class="img-fluid" alt="Personal Image" />
       </div>
@@ -499,16 +499,16 @@
   <!-- Skills -->
   <div id="skills" class="container-fluid my-5 py-5" style="background-color: var(--secondary-color)">
     <div class="row justify-content-center text-center">
-      <h1 class="display-4 text-center mb-5" style="color: var(--background-color)">
+      <h1 class="display-4 text-center mb-5" style="color: var(--background-color); font-weight: 700;">
         My Skill-Building Apps and Languages
       </h1>
 
       <h2 class="text-center fw-bold mb-4" data-bs-toggle="collapse" data-bs-target="#programmingLanguages"
         aria-expanded="false" aria-controls="programmingLanguages"
-        style="color: var(--background-color); cursor: pointer" id="programmingDropdownHeader">
+        style="color: var(--background-color); cursor: pointer;" id="programmingDropdownHeader">
         Programming Languages
         <i class="bi bi-chevron-down" id="programmingDropdownIcon"
-          style="font-size: 1.5rem; transition: transform 0.3s"></i>
+          style="font-size: 1.5rem; transition: transform 0.3s;"></i>
       </h2>
 
       <div class="collapse" id="programmingLanguages">
@@ -537,10 +537,10 @@
       </div>
 
       <h2 class="text-center fw-bold mb-4" data-bs-toggle="collapse" data-bs-target="#webTechnologies"
-        aria-expanded="false" aria-controls="webTechnologies" style="color: var(--background-color); cursor: pointer"
+        aria-expanded="false" aria-controls="webTechnologies" style="color: var(--background-color); cursor: pointer;"
         id="webDropdownHeader">
         Web Technologies
-        <i class="bi bi-chevron-down" id="webDropdownIcon" style="font-size: 1.5rem; transition: transform 0.3s"></i>
+        <i class="bi bi-chevron-down" id="webDropdownIcon" style="font-size: 1.5rem; transition: transform 0.3s;"></i>
       </h2>
 
       <div class="collapse" id="webTechnologies">
@@ -569,10 +569,11 @@
       </div>
 
       <h2 class="text-center fw-bold mb-4" data-bs-toggle="collapse" data-bs-target="#designApplications"
-        aria-expanded="false" aria-controls="designApplications" style="color: var(--background-color); cursor: pointer"
-        id="designDropdownHeader">
+        aria-expanded="false" aria-controls="designApplications"
+        style="color: var(--background-color); cursor: pointer;" id="designDropdownHeader">
         Design & Applications
-        <i class="bi bi-chevron-down" id="designDropdownIcon" style="font-size: 1.5rem; transition: transform 0.3s"></i>
+        <i class="bi bi-chevron-down" id="designDropdownIcon"
+          style="font-size: 1.5rem; transition: transform 0.3s;"></i>
       </h2>
 
       <div class="collapse" id="designApplications">
@@ -606,9 +607,10 @@
       </div>
 
       <h2 class="text-center fw-bold mb-4" data-bs-toggle="collapse" data-bs-target="#others" aria-expanded="false"
-        aria-controls="others" style="color: var(--background-color); cursor: pointer" id="othersDropdownHeader">
+        aria-controls="others" style="color: var(--background-color); cursor: pointer;" id="othersDropdownHeader">
         Others
-        <i class="bi bi-chevron-down" id="othersDropdownIcon" style="font-size: 1.5rem; transition: transform 0.3s"></i>
+        <i class="bi bi-chevron-down" id="othersDropdownIcon"
+          style="font-size: 1.5rem; transition: transform 0.3s;"></i>
       </h2>
 
       <div class="collapse" id="others">
@@ -660,12 +662,12 @@
       <div class="col-12 col-sm-4 mb-3">
         <a href="https://kayexnina.github.io/SAM04_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
           style="width: 100%" role="button"><strong>SAM Activity 4:
-            API with JSON return</strong></a>
+            Grey's Anatomy</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="https://kayexnina.github.io/MP01_Cristobal/index.html" class="btn display-3 rounded-1 py-3 px-4"
           style="width: 100%" role="button"><strong>SAM Midterm P1:
-            Video Integration</strong></a>
+            BINI Website</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
         <a href="https://kayexnina.github.io/404.html" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%"
@@ -673,16 +675,19 @@
             Error 404</strong></a>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 7:
-            Title Here</strong></a>
+        <button class="btn display-3 rounded-1 py-3 px-4 w-100" role="button" disabled>
+          <strong>SAM Activity 7: Title Here</strong>
+        </button>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 8:
-            Title Here</strong></a>
+        <button class="btn display-3 rounded-1 py-3 px-4 w-100" role="button" disabled>
+          <strong>SAM Activity 8: Title Here</strong>
+        </button>
       </div>
       <div class="col-12 col-sm-4 mb-3">
-        <a href="#" class="btn display-3 rounded-1 py-3 px-4" style="width: 100%" role="button"><strong>SAM Activity 9:
-            Title Here</strong></a>
+        <button class="btn display-3 rounded-1 py-3 px-4 w-100" role="button" disabled>
+          <strong>SAM Activity 9: Title Here</strong>
+        </button>
       </div>
     </div>
   </div>
