--- a/SAM01_Cristobal/index.html
+++ b/SAM01_Cristobal/index.html
@@ -45,8 +45,19 @@
 
         .carousel-caption {
             background-color: rgba(10, 11, 12, 0.7);
-            padding: 10px;
             border-radius: 5px;
+            font-size: 12px;
+        }
+
+        /* Media query for smaller screens */
+        @media (max-width: 576px) {
+            .carousel-caption h5 {
+                font-size: 10px;
+            }
+
+            .carousel-caption p {
+                font-size: 10px;
+            }
         }
 
         .carousel-control-prev,
@@ -78,7 +89,6 @@
             outline: none;
             box-shadow: 0 0 10px var(--secondary-color);
         }
-
     </style>
 </head>
 
@@ -95,14 +105,14 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="./assets/mcdoFrontPage.png" class="d-block w-100" alt="MCDO Brochure">
-                    <div class="carousel-caption d-none d-md-block m-4">
+                    <div class="carousel-caption p-1">
                         <h5 style="font-weight: 700;">Front Page</h5>
                         <p>Showcasing McDonald's Social Media Accounts and Branding</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="./assets/mcdoBackPage.png" class="d-block w-100" alt="MCDO Brochure">
-                    <div class="carousel-caption d-none d-md-block m-4">
+                    <div class="carousel-caption p-1">
                         <h5 style="font-weight: 700;">Back Page</h5>
                         <p>The Attributes, Properties, and Characteristics of the McDonald's App</p>
                     </div>
